@@ -139,75 +139,9 @@
       <run-in-terminal>false</run-in-terminal>
       <netscape-remote>false</netscape-remote>
     </web-browser>
-    <web-browser>
-      <_name>W3M Text Browser</_name>
-      <executable>w3m</executable>
-      <command>w3m %s</command>
-      <icon-name>gnome-mime-application-x-executable</icon-name>
-      <run-in-terminal>true</run-in-terminal>
-      <netscape-remote>false</netscape-remote>
-    </web-browser>
-    <web-browser>
-      <_name>Lynx Text Browser</_name>
-      <executable>lynx</executable>
-      <command>lynx %s</command>
-      <icon-name>gnome-mime-application-x-executable</icon-name>
-      <run-in-terminal>true</run-in-terminal>
-      <netscape-remote>false</netscape-remote>
-    </web-browser>
-    <web-browser>
-      <_name>Links Text Browser</_name>
-      <executable>links</executable>
-      <command>links %s</command>
-      <icon-name>gnome-mime-application-x-executable</icon-name>
-      <run-in-terminal>true</run-in-terminal>
-      <netscape-remote>false</netscape-remote>
-    </web-browser>
   </web-browsers>
 
   <mail-readers>
-    <mail-reader>
-      <_name>Evolution Mail Reader 2.4</_name>
-      <executable>evolution-2.4</executable>
-      <command>evolution-2.4 %s</command>
-      <icon-name>evolution</icon-name>
-      <run-in-terminal>false</run-in-terminal>
-    </mail-reader>
-    <mail-reader>
-      <_name>Evolution Mail Reader 2.2</_name>
-      <executable>evolution-2.2</executable>
-      <command>evolution-2.2 %s</command>
-      <icon-name>evolution</icon-name>
-      <run-in-terminal>false</run-in-terminal>
-    </mail-reader>
-    <mail-reader>
-      <_name>Evolution Mail Reader 2.0</_name>
-      <executable>evolution-2.0</executable>
-      <command>evolution-2.0 %s</command>
-      <icon-name>evolution</icon-name>
-      <run-in-terminal>false</run-in-terminal>
-    </mail-reader>
-    <mail-reader>
-      <_name>Evolution Mail Reader 1.6</_name>
-      <executable>evolution-1.6</executable>
-      <command>evolution-1.6 %s</command>
-      <icon-name>evolution</icon-name>
-      <run-in-terminal>false</run-in-terminal>
-    </mail-reader>
-    <mail-reader>
-      <_name>Evolution Mail Reader 1.5</_name>
-      <executable>evolution-1.5</executable>
-      <command>evolution-1.5 %s</command>
-      <icon-name>evolution</icon-name>
-      <run-in-terminal>false</run-in-terminal>
-    </mail-reader>
-    <mail-reader>
-      <_name>Evolution Mail Reader 1.4</_name>
-      <executable>evolution-1.4</executable>
-      <command>evolution-1.4 %s</command>
-      <icon-name>evolution</icon-name>
-      <run-in-terminal>false</run-in-terminal>
-    </mail-reader>
     <mail-reader>
       <_name>Evolution Mail Reader</_name>
       <executable>evolution</executable>
