@@ -1,3 +1,8 @@
+2007-11-26  Sebastien Bacher  <seb128@ubuntu.com>
+
+	* gnome-default-applications.xml.in: don't list the oudated evolution
+	  versions nor the text web browsers (Closes: #499327)
+
 2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Makefile.am: Distcheck fixes.
